add maven option